--- a/Index.ipynb
+++ b/Index.ipynb
@@ -51,11 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use this course material\n",
+    "## How to use this material\n",
     "\n",
     "The code is based around a series of [Jupyter notebooks](https://jupyter.org/). These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with `Jupyter Notebooks` before, please look at the [Introduction to Python and Project Jupyter](./Intro_to_Python_and_Jupyter_WIP.ipynb) module to get a short introduction to their benefits.\n",
-    "\n",
-    "* Recommend approaching them in turn\n",
     "<hr>"
    ]
   },
