--- a/Index.ipynb
+++ b/Index.ipynb
@@ -6,7 +6,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "<img src='./img/EU-Copernicus-EUM-WEKEO_banner_logo.png' align='right' width='75%'/>"
+    "<img src='./frameworks/img/EU-Copernicus-EUM-WEKEO_banner_logo.png' align='right' width='75%'/>"
    ]
   },
   {
@@ -23,7 +23,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<h1>Ocean case studies</h1></div>"
+    "<h1>Ocean case studies</h1></div>\n",
+    "<hr>"
    ]
   },
   {
@@ -38,12 +39,17 @@
     "\n",
     "</div>\n",
     "\n",
+    "### Learning outcomes (optional)\n",
+    "\n",
     "### Outline\n",
     "\n",
     "The **ocean-case-studies** module consists ....\n",
     "\n",
     "* ....\n",
     "\n",
+    "### How to use this material\n",
+    "\n",
+    "The code is based around a series of [Jupyter notebooks](https://jupyter.org/). These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with `Jupyter Notebooks` before, please look at the [Introduction to Python and Project Jupyter](./working-with-python/Intro_to_Python_and_Jupyter_WIP.ipynb) module to get a short introduction to their benefits.\n",
     "<hr>"
    ]
   },
@@ -51,19 +57,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to use this material\n",
+    "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
-    "The code is based around a series of [Jupyter notebooks](https://jupyter.org/). These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with `Jupyter Notebooks` before, please look at the [Introduction to Python and Project Jupyter](./Intro_to_Python_and_Jupyter_WIP.ipynb) module to get a short introduction to their benefits.\n",
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "## Contents and components\n",
+    "## <a id='TOC_TOP'></a>Contents\n",
+    "\n",
+    "</div>\n",
     "\n",
     "The case study library consists of the following modules:\n",
     "\n",
