--- a/Index.ipynb
+++ b/Index.ipynb
@@ -13,9 +13,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copernicus Marine Training Service <br>\n",
+    "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
     "**Copyright:** 2022 EUMETSAT <br>\n",
-    "**License:** MIT"
+    "**License:** MIT <br>\n",
+    "**Author:** B. Loveday (Innoflair UG / EUMETSAT)"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<h1>Ocean case studies</h1></div>\n",
+    "<h3>Ocean case studies</h3></div>\n",
     "<hr>"
    ]
   },
@@ -43,9 +44,7 @@
     "\n",
     "### Outline\n",
     "\n",
-    "The **ocean-case-studies** module consists ....\n",
-    "\n",
-    "* ....\n",
+    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from Sentinel-3 and Sentinel-6 provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors, while others are linked to [UN Ocean Decade challenges](https://www.oceandecade.org/challenges/). The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
     "### How to use this material\n",
     "\n",
@@ -63,9 +62,25 @@
     "\n",
     "</div>\n",
     "\n",
-    "The case study library consists of the following modules:\n",
+    "The case study library contains the following notebooks:\n",
     "\n",
-    "1. ...."
+    "1. **UN Ocean Decade**\n",
+    "  * [Challenge 1: River plumes WIP](./case_studies/UN_Ocean_Decade/Challenge01_marine_pollution/River_plot.ipynb)\n",
+    "  * [Challenge 2: GBR bleaching WIP](./case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/GBR_plot.ipynb)\n",
+    "  * [Challenge 3: Coastal deoxygenation: South African red tides WIP](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI_spectral_plot.ipynb)\n",
+    "  <br><br>\n",
+    "\n",
+    "2. **Ocean colour**\n",
+    "  * link\n",
+    "<br><br>\n",
+    "\n",
+    "3. **Thermal radiometry**\n",
+    "  * link\n",
+    "<br><br>\n",
+    "\n",
+    "4. **Altimetry**\n",
+    "  * link\n",
+    "<br><br>"
    ]
   },
   {
@@ -93,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
