--- a/Index.ipynb
+++ b/Index.ipynb
@@ -6,7 +6,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "<img src='./frameworks/img/EU-Copernicus-EUM-WEKEO_banner_logo.png' align='right' width='75%'/>"
+    "<img src='https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/tools/frameworks/-/raw/main/img/UN_decade_banner.png' align='right' width='100%'/>"
    ]
   },
   {
@@ -44,12 +44,26 @@
     "\n",
     "### Outline\n",
     "\n",
-    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from Sentinel-3 and Sentinel-6 provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors, while others are linked to [UN Ocean Decade challenges](https://www.oceandecade.org/challenges/). The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from Sentinel-3 and Sentinel-6 provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors, while others are linked to \n",
+    "\n",
+    "<a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "\n",
+    "Case studies that align with the UN Ocean Decade priorities are organised according to the challenge they respond to. The list of challenges is below;\n",
+    "\n",
+    "* Challenge 1: Understand and beat marine pollution\n",
+    "* Challenge 2: Protect and restore ecosystems and biodiversity\n",
+    "* Challenge 3: Sustainably feed the global population\n",
+    "* Challenge 4: Develop a sustainable and equitable ocean economy\n",
+    "* Challenge 5: Unlock ocean-based solutions to climate change\n",
+    "* Challenge 6: Increase community resilience to ocean hazards\n",
+    "* Challenge 7: Expand the Global Ocean Observing System\n",
+    "* Challenge 8: Create a digital representation of the Ocean\n",
+    "* Challenge 9: Skills, knowledge and technology for all\n",
+    "* Challenge 10: Change humanity’s relationship with the ocean\n",
     "\n",
     "### How to use this material\n",
     "\n",
-    "The code is based around a series of [Jupyter notebooks](https://jupyter.org/). These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with `Jupyter Notebooks` before, please look at the [Introduction to Python and Project Jupyter](./working-with-python/Intro_to_Python_and_Jupyter_WIP.ipynb) module to get a short introduction to their benefits.\n",
-    "<hr>"
+    "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's **README** for further information on how to set up Jupyter."
    ]
   },
   {
@@ -65,21 +79,28 @@
     "The case study library contains the following notebooks:\n",
     "\n",
     "1. **UN Ocean Decade**\n",
-    "  * [Challenge 1: River plumes WIP](./case_studies/UN_Ocean_Decade/Challenge01_marine_pollution/River_plot.ipynb)\n",
-    "  * [Challenge 2: GBR bleaching WIP](./case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/GBR_plot.ipynb)\n",
-    "  * [Challenge 3: Coastal deoxygenation: South African red tides WIP](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI_spectral_plot.ipynb)\n",
+    "  * Challenge 1: Coming soon\n",
+    "  * Challenge 2: Coming soon\n",
+    "  * [Challenge 3: Coastal deoxygenation: South African red tides WIP](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb)\n",
+    "  * Challenge 4: Coming soon\n",
+    "  * Challenge 5: Coming soon\n",
+    "  * Challenge 6: Coming soon\n",
+    "  * Challenge 7: Coming soon\n",
+    "  * Challenge 8: Coming soon\n",
+    "  * Challenge 9: Coming soon\n",
+    "  * Challenge 10: Coming soon\n",
     "  <br><br>\n",
     "\n",
     "2. **Ocean colour**\n",
-    "  * link\n",
+    "  * Coming soon\n",
     "<br><br>\n",
     "\n",
     "3. **Thermal radiometry**\n",
-    "  * link\n",
+    "  * Coming soon\n",
     "<br><br>\n",
     "\n",
     "4. **Altimetry**\n",
-    "  * link\n",
+    "  * Coming soon\n",
     "<br><br>"
    ]
   },
@@ -108,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
