--- a/case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb
+++ b/case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb
@@ -41,10 +41,10 @@
     "<b>PREREQUISITES </b>\n",
     "\n",
     "There are no prerequisite notebooks for this module, but you may wish to look at the following notebooks on using OLCI data; <br>\n",
-    "- **<a href=https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci target=\"_blank\">Learn OLCI (EUMETSAT Gitlab)</a>**\n",
+    "- **<a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci\" target=\"_blank\">Learn OLCI (EUMETSAT Gitlab)</a>**\n",
     "\n",
     "For more contextual information, users should refer to the following case study where the image we generate here is published:\n",
-    "- **<a href=https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci target=\"_blank\">Coastal deoxygenation: South African red tides</a>**<<FIX\n",
+    "- **<a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci\" target=\"_blank\">Coastal deoxygenation: South African red tides</a>**<<FIX\n",
     "\n",
     "</div>\n",
     "<hr>"
@@ -72,7 +72,7 @@
     "\n",
     "### Outline\n",
     "\n",
-    "This code will replicate figure ??? from this case study; **<a href=https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci target=\"_blank\">Coastal deoxygenation: South African red tides</a>**<<FIX.\n",
+    "This code will replicate figure ??? from this case study; **<a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/sensors/learn-olci\" target=\"_blank\">Coastal deoxygenation: South African red tides</a>**<<FIX.\n",
     "\n",
     "<div class=\"alert alert-info\" role=\"alert\">\n",
     "\n",
@@ -166,7 +166,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to allow us to download data from the Data Store via API, we need to provide our credentials. To do this, we need to create a file called `.eumdac_credentials` in our home directory. For most computer systems the home directory can be found at the path \\user\\username, /users/username, or /home/username depending on your operating system.\n",
+    "To access Sentinel-3 data from the <a href=\"https://data.eumetsat.int\">EUMETSAT Data Store</a>, we will use the EUMETSAT Data Access Client (`eumdac`). If you are working with the recommended Anaconda Python distribution and used the supplied environment file (environment.yml) to build this python environment (as detailed in the README), you will already have installed this. If not, you can install eumdac using;\n",
+    "\n",
+    "`conda install -c eumetsat eumdac`\n",
+    "\n",
+    "However, you can also find the source code on the <a href=\"https://gitlab.eumetsat.int/eumetlab/data-services/eumdac\">EUMETSAT gitlab</a>. Please visit the EUMETSAT user support confluence spaces for the the <a href=\"https://eumetsatspace.atlassian.net/wiki/spaces/DSDS/overview\">Data Store</a> and <a href=\"https://eumetsatspace.atlassian.net/wiki/spaces/EUMDAC/overview\">eumdac</a> for more information.\n",
+    "\n",
+    "In order to allow us to download data from the Data Store via API, we need to provide our credentials. We can do this in two ways; either by creating a file called `.eumdac_credentials` in our home directory (*option 1 - recommended*) or by supplying our credentials directly in this script (*option 2*). \n",
+    "\n",
+    "#### Option 1: creating  `.eumdac_credentials` in our home directory\n",
+    "\n",
+    "For most computer systems the home directory can be found at the path \\user\\username, /users/username, or /home/username depending on your operating system.\n",
     "\n",
     "In this file we need to add the following information exactly as follows;\n",
     "\n",
@@ -177,9 +187,11 @@
     "}\n",
     "```\n",
     "\n",
-    "You must replace `<your_consumer_key>` and `<your_consumer_secret>` with the information you extract from https://api.eumetsat.int/api-key/. You will need a [EUMETSAT Earth Observation Portal account](https://eoportal.eumetsat.int/) to access this link, and in order to see the information you must click the \"Show hidden fields\" button at the bottom of the page.\n",
+    "You must replace `<your_consumer_key>` and `<your_consumer_secret>` with the information you extract from https://api.eumetsat.int/api-key/. You will need a <a href=\"https://eoportal.eumetsat.int/\">EUMETSAT Earth Observation Portal account</a> to access this link, and in order to see the information you must click the \"Show hidden fields\" button at the bottom of the page.\n",
     "\n",
     "*Note: your key and secret are permanent, so you only need to do this once, but you should take care to never share them*\n",
+    "\n",
+    "Make sure to save the file without any kind of extension.\n",
     "\n",
     "Once you have done this, you can read in your credentials using the commands in the following cell. These will be used to generate a time-limited token, which will refresh itself when it expires.\n",
     "\n",
