--- a/Index.ipynb
+++ b/Index.ipynb
@@ -81,7 +81,7 @@
     "1. **UN Ocean Decade**\n",
     "  * Challenge 1: Coming soon\n",
     "  * Challenge 2: Coming soon\n",
-    "  * [Challenge 3: Coastal deoxygenation: South African red tides WIP](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb)\n",
+    "  * [Challenge 3: Coastal deoxygenation: South African red tides](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb)\n",
     "  * Challenge 4: Coming soon\n",
     "  * Challenge 5: Coming soon\n",
     "  * Challenge 6: Coming soon\n",
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
