--- a/Index.ipynb
+++ b/Index.ipynb
@@ -63,7 +63,8 @@
     "\n",
     "### How to use this material\n",
     "\n",
-    "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's **README** for further information on how to set up Jupyter."
+    "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\n",
+    "\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter."
    ]
   },
   {
@@ -79,15 +80,15 @@
     "The case study library contains the following notebooks:\n",
     "\n",
     "1. **UN Ocean Decade**\n",
-    "  * Challenge 1: Coming soon\n",
-    "  * Challenge 2: Coming soon\n",
-    "  * [Challenge 3: Coastal deoxygenation: South African red tides](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Coastal_deoxygenation_South_African_red_tides_OLCI.ipynb)\n",
-    "  * Challenge 4: Coming soon\n",
-    "  * Challenge 5: Coming soon\n",
-    "  * Challenge 6: Coming soon\n",
-    "  * Challenge 7: Coming soon\n",
-    "  * Challenge 8: Coming soon\n",
-    "  * Challenge 9: Coming soon\n",
+    "  * Challenge 01: coming soon\n",
+    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(SLSTR & OSTIA)*\n",
+    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(OLCI)*\n",
+    "  * Challenge 04: Coming soon\n",
+    "  * Challenge 05: Coming soon\n",
+    "  * Challenge 06: Coming soon\n",
+    "  * Challenge 07: Coming soon\n",
+    "  * Challenge 08: Coming soon\n",
+    "  * Challenge 09: Coming soon\n",
     "  * Challenge 10: Coming soon\n",
     "  <br><br>\n",
     "\n",
