--- a/Index.ipynb
+++ b/Index.ipynb
@@ -15,8 +15,19 @@
    "source": [
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
     "**Copyright:** 2022 EUMETSAT <br>\n",
-    "**License:** MIT <br>\n",
-    "**Author:** B. Loveday (Innoflair UG / EUMETSAT)"
+    "**License:** MIT <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<html>\n",
+    "  <div style=\"width:100%\">\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?urlpath=%2Ftree%2FIndex.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
+    "  </div>\n",
+    "</html>"
    ]
   },
   {
@@ -34,19 +45,12 @@
     "Collapsed": "false"
    },
    "source": [
-    "<div class=\"alert alert-info\" role=\"alert\">\n",
+    "# Index for the ocean-case-studies module\n",
     "\n",
-    "## Index\n",
+    "### Module outline\n",
     "\n",
-    "</div>\n",
-    "\n",
-    "### Learning outcomes (optional)\n",
-    "\n",
-    "### Outline\n",
-    "\n",
-    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from Sentinel-3 and Sentinel-6 provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors, while others are linked to \n",
-    "\n",
-    "<a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
+    "in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
     "Case studies that align with the UN Ocean Decade priorities are organised according to the challenge they respond to. The list of challenges is below;\n",
     "\n",
@@ -61,10 +65,33 @@
     "* Challenge 9: Skills, knowledge and technology for all\n",
     "* Challenge 10: Change humanity’s relationship with the ocean\n",
     "\n",
+    "<hr>\n",
+    "\n",
     "### How to use this material\n",
     "\n",
     "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\n",
-    "\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter."
+    "\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter.\n",
+    "\n",
+    "This module is split into four parts, focussed on:\n",
+    "* Case studies that are relevant to the <font color=\"#3498DB\">**UN Ocean Decade**</font>, challenges.\n",
+    "* Case studies that are focus on the use of <font color=\"#1E8449\">**Ocean Colour**</font> data and its applications.\n",
+    "* Case studies that are focus on the use of <font color=\"#C0392B\">**Thermal radiometry**</font> data and its applications.\n",
+    "* Case studies that are focus on the use of <font color=\"#8E44AD\">**Altimetry**</font> data and its applications.\n",
+    "\n",
+    "There is no suggested order in which to access the notebooks, but pre-requisites where applicable are listed at the top of each notebook. Not all notebooks may be relevant for every user, so we have tried to make each one as self contained as possible.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### Learning outcomes\n",
+    "\n",
+    "Very broadly, from this module, you can expect to learn:\n",
+    "* How to use multiple remote-sensing based data sets to address the UN ocean decade challenges\n",
+    "* How to work with the Copernicus marine data streams from Sentinel-3 and Sentinel-6\n",
+    "* How to combine Earth observation data with *in situ* measurements and model simulations\n",
+    "\n",
+    "Each notebook contains more specific information on its expected learning outcomes.\n",
+    "\n",
+    "<hr>"
    ]
   },
   {
@@ -79,10 +106,11 @@
     "\n",
     "The case study library contains the following notebooks:\n",
     "\n",
-    "1. **UN Ocean Decade**\n",
+    "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "  * Challenge 01: coming soon\n",
-    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(SLSTR & OSTIA)*\n",
-    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(OLCI)*\n",
+    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(Sentinel-3 SLSTR & OSTIA)*\n",
+    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(Sentinel-3 OLCI)*\n",
+    "  * Challenge 04: Coming soon\n",
     "  * Challenge 04: Coming soon\n",
     "  * Challenge 05: Coming soon\n",
     "  * Challenge 06: Coming soon\n",
@@ -92,15 +120,15 @@
     "  * Challenge 10: Coming soon\n",
     "  <br><br>\n",
     "\n",
-    "2. **Ocean colour**\n",
+    "2. <font color=\"#1E8449\">**Ocean Colour**</font>\n",
     "  * Coming soon\n",
     "<br><br>\n",
     "\n",
-    "3. **Thermal radiometry**\n",
+    "3. <font color=\"#C0392B\">**Thermal radiometry**</font>\n",
     "  * Coming soon\n",
     "<br><br>\n",
     "\n",
-    "4. **Altimetry**\n",
+    "4. <font color=\"#8E44AD\">**Altimetry**</font>\n",
     "  * Coming soon\n",
     "<br><br>"
    ]
