--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -28,6 +28,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<html>\n",
+    "  <div style=\"width:100%\">\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?urlpath=%2Ftree%2FCase_studies%2FUN_Ocean_Decade%2FChallenge03_sustainable_food%2FDeoxygenation_impacts_marine_life_benguela.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
+    "  </div>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-success\">\n",
     "<h3>Ocean case studies</h3></div>"
    ]
@@ -489,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
