--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -103,6 +103,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We begin by importing all of the libraries that we need to run this notebook. If you have built your python using the environment file provided in this repository, then you should have everything you need. For more information on building environment, please see the repository **<a href=\"../../../README.md\" target=\"_blank\">README</a>**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -162,12 +169,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to retrieve the OLCI data from the EUMETSAT Data Store. Collections are stored according to their `collection id`, which for OLCI Level-2 full resolution products is `EO:EUM:DAT:0407` (as specified in the \"Data Used\" section above). We will also provide the relevant products we want from this collection, which in this case is two granules. For more information on how to search for the data you want, please see the Learn OLCI Gitlab link above."
+    "Next, we define a switch that determines if we should download new data. If `download_data = False` the notebook will look for existing, locally processed data, saving us time if we run more than once. By default this is set to true, assuming that the notebook has not yet been run."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Settings\n",
+    "download_data = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to retrieve the OLCI data from the EUMETSAT Data Store. Collections are stored according to their `collection id`, which for OLCI Level-2 full resolution products is `EO:EUM:DAT:0407` (as specified in the \"Data Used\" section above). We will also provide the relevant products we want from this collection, which in this case is two granules. For more information on how to search for the data you want, please see the Learn OLCI Gitlab link above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +212,9 @@
     "\n",
     "In order to allow us to download data from the Data Store via API, we need to provide our credentials. We can do this in two ways; either by creating a file called `.eumdac_credentials` in our home directory (*option 1 - recommended*) or by supplying our credentials directly in this script (*option 2*). \n",
     "\n",
-    "#### Option 1: creating  `.eumdac_credentials` in our home directory\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "\n",
+    "#### Option 1: creating  `.eumdac_credentials` in your home directory\n",
     "\n",
     "For most computer systems the home directory can be found at the path \\user\\username, /users/username, or /home/username depending on your operating system.\n",
     "\n",
@@ -205,44 +231,23 @@
     "\n",
     "*Note: your key and secret are permanent, so you only need to do this once, but you should take care to never share them*\n",
     "\n",
-    "Make sure to save the file without any kind of extension. Once you have done this, you can read in your credentials using the commands in the following cell. These will be used to generate a time-limited token, which will refresh itself when it expires.\n",
-    "\n",
-    "<div class=\"alert alert-warning\" role=\"alert\">\n",
-    "Optionally, you can provide your credentials directly as follows;\n",
-    "<br>\n",
-    "\n",
+    "Make sure to save the file without any kind of extension. Once you have done this, you can read in your credentials using the commands in the following cell with `file_credentials = True`. These credentials will be used to generate a time-limited token, which will refresh itself when it expires.\n",
     "    \n",
-    "`token = eumdac.AccessToken((consumer_key, consumer_secret))`\n",
+    "</div>\n",
+    "    \n",
+    "<div class=\"alert alert-danger\" role=\"alert\">\n",
     "\n",
-    "<br> \n",
-    "Note: this method is convenient in the short term, but is not really recommended as you have to put your key and secret in this notebook, and run the risk of accidentally sharing them. This method also requires you to authenticate on a notebook-by-notebook basis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This token 'bd2ac104-84f1-3179-b596-48a833815425' expires 2022-08-23 15:31:30.014338\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(os.path.join(os.path.expanduser(\"~\"),'.eumdac_credentials')) as json_file:\n",
-    "    credentials = json.load(json_file)\n",
-    "    token = eumdac.AccessToken((credentials['consumer_key'], credentials['consumer_secret']))\n",
-    "    print(f\"This token '{token}' expires {token.expiration}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we have a token, we can ask the Data Store for our specified products. The box below will download them in sequence, unzip them and tidy up."
+    "#### Option 2: Generating a token directly by entering your key and secret in the notebook as follows*\n",
+    "   \n",
+    "Alternatively you can enter your credentials directly in the notebook by updating the following line with your user specifi information and setting `file_credentials = False`.\n",
+    "\n",
+    "```\n",
+    "token = eumdac.AccessToken((\"consumer_key\", \"consumer_secret\"))\n",
+    "```\n",
+    "\n",
+    "However, while this method is convenient in the short term, but is not really recommended as you have to put your key and secret in this notebook, and run the risk of accidentally sharing them. This method also requires you to authenticate on a notebook-by-notebook basis.\n",
+    "    \n",
+    "<div>"
    ]
   },
   {
@@ -254,40 +259,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving: S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3 from EO:EUM:DAT:0407\n",
-      "Downloading S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip.\n",
-      "Download of product S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip finished.\n",
-      "Unzipping of product /Users/benloveday/Code/Git_Reps/CMTS/internal/applications/ocean-case-studies/case_studies/UN_ocean_decade/Challenge03_sustainable_food/products/S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip finished.\n",
-      "Retrieving: S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3 from EO:EUM:DAT:0407\n",
-      "Downloading S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip.\n",
-      "Download of product S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip finished.\n",
-      "Unzipping of product /Users/benloveday/Code/Git_Reps/CMTS/internal/applications/ocean-case-studies/case_studies/UN_ocean_decade/Challenge03_sustainable_food/products/S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip finished.\n"
+      "This token 'dd16eb84-a043-3c85-baf2-eba16e70aa0d' expires 2022-09-15 09:36:01.657577\n"
      ]
     }
    ],
    "source": [
-    "# Skip this today, venue bandwidth is too low!\n",
+    "# load credentials\n",
+    "file_credentials = True\n",
     "\n",
-    "datastore = eumdac.DataStore(token)\n",
+    "if file_credentials == True:\n",
+    "    with open(os.path.join(os.path.expanduser(\"~\"),'.eumdac_credentials')) as json_file:\n",
+    "        credentials = json.load(json_file)\n",
+    "        token = eumdac.AccessToken((credentials['consumer_key'], credentials['consumer_secret']))\n",
+    "        print(f\"This token '{token}' expires {token.expiration}\")\n",
+    "else:\n",
+    "    # see below for more information\n",
+    "    token = eumdac.AccessToken((\"consumer_key\", \"consumer_secret\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have a token, we can create an instance of the EUMETSAT Data Store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datastore = eumdac.DataStore(token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now ask the Data Store for our specified products. The box below will download them in sequence, unzip them and tidy up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving: S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3 from EO:EUM:DAT:0407\n",
+      "Downloading S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip.\n",
+      "Download of product S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip finished.\n",
+      "Unzipping of product /Users/benloveday/Code/Git_Reps/CMTS/internal/applications/ocean-case-studies/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/products/S3A_OL_2_WFR____20220220T080053_20220220T080353_20220221T184925_0179_082_149_3420_MAR_O_NT_003.SEN3.zip finished.\n",
+      "Retrieving: S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3 from EO:EUM:DAT:0407\n",
+      "Downloading S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip.\n",
+      "Download of product S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip finished.\n",
+      "Unzipping of product /Users/benloveday/Code/Git_Reps/CMTS/internal/applications/ocean-case-studies/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/products/S3A_OL_2_WFR____20220220T080353_20220220T080653_20220221T184943_0180_082_149_3600_MAR_O_NT_003.SEN3.zip finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if download_data:    \n",
+    "    for product_id in product_list:\n",
+    "        print(f\"Retrieving: {product_id} from {collection_id}\")\n",
     "\n",
-    "for product_id in product_list:\n",
-    "    print(f\"Retrieving: {product_id} from {collection_id}\")    \n",
+    "        # find the required products\n",
+    "        selected_product = datastore.get_product(product_id=product_id, collection_id=collection_id)\n",
     "\n",
-    "    selected_collection = datastore.get_collection(collection_id)\n",
-    "    selected_product = datastore.get_product(product_id=product_id, collection_id=collection_id)\n",
-    "    \n",
-    "    with selected_product.open() as fsrc, open(os.path.join(download_dir, fsrc.name), mode='wb') as fdst:\n",
-    "        print(f'Downloading {fsrc.name}.')\n",
-    "        shutil.copyfileobj(fsrc, fdst)\n",
-    "        print(f'Download of product {fsrc.name} finished.')\n",
+    "        # download the required products\n",
+    "        with selected_product.open() as fsrc, open(os.path.join(download_dir, fsrc.name), mode='wb') as fdst:\n",
+    "            print(f'Downloading {fsrc.name}.')\n",
+    "            shutil.copyfileobj(fsrc, fdst)\n",
+    "            print(f'Download of product {fsrc.name} finished.')\n",
     "\n",
-    "    with zipfile.ZipFile(fdst.name, 'r') as zip_ref:\n",
-    "        for file in zip_ref.namelist():\n",
-    "            if file.startswith(str(selected_product)):\n",
-    "                zip_ref.extract(file, download_dir)\n",
-    "        print(f'Unzipping of product {fdst.name} finished.')\n",
+    "        # Unzip the required products\n",
+    "        with zipfile.ZipFile(fdst.name, 'r') as zip_ref:\n",
+    "            for file in zip_ref.namelist():\n",
+    "                if file.startswith(str(selected_product)):\n",
+    "                    zip_ref.extract(file, download_dir)\n",
+    "            print(f'Unzipping of product {fdst.name} finished.')\n",
     "\n",
-    "    os.remove(fdst.name)\n"
+    "        # tidy up the required products\n",
+    "        os.remove(fdst.name)"
    ]
   },
   {
@@ -315,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
