20220914 blo poc pic

--- a/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb
@@ -21,7 +21,7 @@
     "<font color=\"#138D75\">**Copernicus Marine Training Service**</font> <br>\n",
     "**Copyright:** 2022 EUMETSAT <br>\n",
     "**License:** MIT <br>\n",
-    "**Authors:** B. Loveday (Innoflair UG / EUMETSAT), Hayley Evers-King (EUMETSAT)"
+    "**Authors:** <a href=\"mailto:copernicus.training@eumetsat.int\" target=\"_blank\">Dr Ben Loveday (EUMETSAT/Innoflair UG)</a>, Dr Hayley Evers-King (EUMETSAT), Dr Marie Smith (CSIR)"
    ]
   },
   {
