20221014 blo swh agul

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -49,8 +49,8 @@
     "\n",
     "### Module outline\n",
     "\n",
-    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from **<a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a>** and **<a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a>** provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
-    "in combination with other data streams. Others are linked to **<a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>**. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
+    "The **ocean-case-studies** module consists of a series of Jupyter Notebooks that reflect one or more facets of a marine case study, as published on the EUMETSAT website. Though ancillary data sources may be used, the notebooks focus on the use of Copernicus Marine data from <a href=\"https://www.eumetsat.int/sentinel-3\" target=\"_blank\">Sentinel-3</a> and <a href=\"https://www.eumetsat.int/sentinel-6\" target=\"_blank\">Sentinel-6</a> provided by EUMETSAT. Many of the cases are highlight specific uses of individual sensors and/or how to use their data \n",
+    "in combination with other data streams. Others are linked to <a href=\"https://www.oceandecade.org/challenges/\" target=\"_blank\">UN Ocean Decade challenges</a>. The list of case studies is every-growing and the Copernicus Marine Training Service, aims to produce a new notebook alongside every new marine case study published on our website, where feasible.\n",
     "\n",
     "Case studies that align with the UN Ocean Decade priorities are organised according to the challenge they respond to. The list of challenges is below;\n",
     "\n",
@@ -69,8 +69,8 @@
     "\n",
     "### How to use this material\n",
     "\n",
-    "This module is based around a series of **<a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>**. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the **<a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a>** module to get a short introduction to their usage and benefits. Refer to this module's **<a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\n",
-    "\" target=\"_blank\">**README**</a>** for further information on how to set up Jupyter.\n",
+    "This module is based around a series of <a href=\"https://jupyter.org/\" target=\"_blank\">Jupyter Notebooks</a>. These support high-level interactive learning by allowing us to combine code, text descriptions and data visualisations. If you have not worked with Jupyter Notebooks before, please look at the <a href=\"./working-with-python/Intro_to_Python_and_Jupyter.ipynb\" target=\"_blank\">Introduction to Python and Project Jupyter</a> module to get a short introduction to their usage and benefits. Refer to this module's <a href=\"https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/applications/ocean-case-studies\n",
+    "\" target=\"_blank\">**README**</a> for further information on how to set up Jupyter.\n",
     "\n",
     "This module is split into four parts, focussed on:\n",
     "* Case studies that are relevant to the <font color=\"#3498DB\">**UN Ocean Decade**</font>, challenges.\n",
@@ -106,11 +106,11 @@
     "\n",
     "1. <font color=\"#3498DB\">**UN Ocean Decade**</font>\n",
     "  * Challenge 01: coming soon\n",
-    "  * **[Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb)** *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA**</font>)*\n",
-    "  * **[Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb)** *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
+    "  * [Challenge 02: Marine heatwaves intensification threatens coral reef health](./Case_studies/UN_Ocean_Decade/Challenge02_ecosystems_and_biodiversity/Marine_heatwaves_intensification_threatens_coral_reef_health.ipynb) *(<font color=\"#C0392B\">**Sentinel-3 SLSTR & OSTIA**</font>)*\n",
+    "  * [Challenge 03: Deoxygenation impacts marine life in the Benguela](./Case_studies/UN_Ocean_Decade/Challenge03_sustainable_food/Deoxygenation_impacts_marine_life_benguela.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
     "  * Challenge 04: Coming soon\n",
-    "  * **[Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb)** *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
-    "  * Challenge 06: Coming soon\n",
+    "  * [Challenge 05: Quantifying particulate organic and inorganic carbon in the ocean](./Case_studies/UN_Ocean_Decade/Challenge05_ocean_solutions_climate_change/Quantifying_particulate_organic_and_inorganic_carbon_in_the_ocean.ipynb) *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>)*\n",
+    "   * [Challenge 06: Tracking tropical storm impacts using altimetry](./Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb) *(<font color=\"#8E44AD\">**Sentinel-3 SRAL / Sentinel-6**</font>)*\n",
     "  * Challenge 07: Coming soon\n",
     "  * Challenge 08: Coming soon\n",
     "  * Challenge 09: Coming soon\n",
@@ -118,7 +118,9 @@
     "  <br><br>\n",
     "\n",
     "2. **Thematic**\n",
-    "  * Coming soon"
+    "  * Biophysical interactions in the Agulhas Current: Coming soon *(<font color=\"#1E8449\">**Sentinel-3 OLCI**</font>, <font color=\"#C0392B\">**SLSTR**</font> and <font color=\"#8E44AD\">**SRAL**</font>)*\n",
+    "<br><br>\n",
+    "\n"
    ]
   },
   {
