--- a/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
+++ b/Case_studies/UN_Ocean_Decade/Challenge06_community_resilience_ocean_hazards/Tracking_tropical_cyclone_impacts_using_altimetry.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "<html>\n",
     "  <div style=\"width:100%\">\n",
-    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?urlpath=%2Ftree%2FCase_studies%2FUN_Ocean_Decade%2FChallenge06_community_resilience_ocean_hazards%2FTracking_tropical_cycline_impacts_using_altimetry.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
+    "    <div style=\"float:left\"><a href=\"https://mybinder.org/v2/git/https%3A%2F%2Fgitlab.eumetsat.int%2Feumetlab%2Foceans%2Focean-training%2Fapplications%2Focean-case-studies/HEAD?urlpath=%2Ftree%2FCase_studies%2FUN_Ocean_Decade%2FChallenge06_community_resilience_ocean_hazards%2FTracking_tropical_cyclone_impacts_using_altimetry.ipynb\"><img src=\"https://mybinder.org/badge_logo.svg\" alt=\"Open in Binder\"></a></div>\n",
     "    <div style=\"float:left\"><p>&emsp;</p></div>\n",
     "  </div>\n",
     "</html>\n",
@@ -93,6 +93,8 @@
     "* convert the plot series into an animation\n",
     "\n",
     "### Outline\n",
+    "\n",
+    "Tropical cyclones have been responsible for over 700,000 deaths and more than 1,400 billion US dollars worth of damage in the last 50 years (WMO). They are a major use case for meteorological satellite data, and a challenge for weather forecasting. Beyond observation and prediction of tropical cyclones as an atmospheric phenomenon, there is also an ocean component to consider, both in terms of storm formation, and of their impacts. Satellites provide measurements of sea surface temperature, which, along with altimetry measurements can be used to estimate tropical cycle heat potential, a key factor in forecasting cyclones and their intensity. Altimetry data can also be used to measure the ocean response to tropical cyclones, and ultimately its impact on maritime activities and coastal communities through high winds, storm surges, and extreme wave heights. Tropical cyclones also need to be monitored in the context of climate change, which has the potential to alter atmospheric circulations, ocean heat content, and exacerbate the impacts of cyclones through sea level rise. \n",
     "\n",
     "This code will replicate the animations from Figure 2 from the **<a href=\"https://www.eumetsat.int/tracking-tropical-cyclone-impacts-using-altimetry\" target=\"_blank\">Tracking tropical cyclone impacts using altimetry</a>** case study. We recommend that users of this notebook refer to the case study for more background information on how SWH data from altimetry is incoporated into wave forecast models.\n",
     "\n",
